--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ksk.daily_agenda">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +21,9 @@
         <activity android:name=".Me" />
         <activity android:name=".Groups" />
         <activity android:name=".CreateGroup" />
-        <activity android:name=".GroupActivity"></activity>
+        <activity android:name=".GroupActivity" />
+        <activity android:name=".FridgeMe" />
+        <activity android:name=".EditName" />
     </application>
 
 </manifest>
